fixed white space at left

--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,7 @@
 @tailwind utilities;
 
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap');
+
+html, body {
+  overflow-x: hidden;
+}
